--- a/sendex/templates/index.html
+++ b/sendex/templates/index.html
@@ -8,12 +8,9 @@
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mx-auto mt-3 px-4">
-    <a href="https://www.linkedin.com/company/qubeknit" target="_blank">
+    <a class="container mt-3" href="https://www.linkedin.com/company/qubeknit" target="_blank">
       <img src="{% static 'text.png' %}" alt="Qubeknit" width="300" height="200">
     </a>
-
-    </div>
   <div class="container mx-auto mt-10 px-4">
     <h1 class="text-2xl font-semibold text-center mb-4 mt-10">WhatsApp Chat Initiator</h1>
     <p class="text-small text-center mb-4">(BETA version)</p><hr><br>
