--- a/sendex/templates/index.html
+++ b/sendex/templates/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="container mx-auto mt-3 px-4">
     <a href="https://www.linkedin.com/company/qubeknit" target="_blank">
-      <img src="{% static 'text.png' %}" alt="Qubeknit" width="300" height="200">
+      <img src="{% static 'text.png' %}" alt="Qubeknit" width="30" height="20">
     </a>
     </div>
   <div class="container mx-auto mt-10 px-4">
     <h1 class="text-2xl font-semibold text-center mb-4 mt-10">WhatsApp Chat Initiator</h1>
-    <p class="text-small text-center mb-4">(BETA version)</p><hr><br>
+    <p class="text-small text-center mb-4">(BETA version for desktop only)</p><hr><br>
     
     <div class="card bg-white shadow-lg hover:shadow-2xl rounded mx-auto w-full lg:w-1/2">  <div class="px-6 py-4">
       <form action="#" method="post">
