--- a/sendex/templates/index.html
+++ b/sendex/templates/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container mx-auto mt-3 px-4">
     <a href="https://www.linkedin.com/company/qubeknit" target="_blank">
-      <img src="{% static 'text.png' %}" alt="Qubeknit" width="30" height="20">
+      <img src="https://qubeknit.com/assets/images/text.png" alt="Qubeknit" width="300" height="200">
     </a>
   </div>
   <div class="container mx-auto mt-10 px-4">
